[package]
name = "spiffo"
version = "0.1.0"
authors = ["junkben"]
edition = "2021"
license = "BSD-3-Clause License"
description = "Project Zomboid server manager"
readme = "README.md"
repository = "https://github.com/junkben/spiffo"

[[bin]]
name = "spiffo"

[dependencies]
log = "0.4.17"
clap = { version = "4.2.7", features = ["derive", "env", "string"]}
derive-getters = "0.3.0"
configparser = { version = "3.0.2", features = ["indexmap"] }
indexmap = { version = "1.9.3", features = ["serde"] }
serde = {version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
anyhow = "1.0.71"
chrono = "0.4.24"
sysinfo = "0.29.0"

[dev-dependencies]